--- a/informe/references.bib
+++ b/informe/references.bib
@@ -1,6 +1,6 @@
 @book{hopcroft,
-  title={Introduction to Automata Theory, Languages, and Computation},
-  author={Hpcroft, J., Ullman, J},
+  title="Introduction to Automata Theory, Languages, and Computation",
+  author="Hopcroft J., Ullman J",
   isbn={0-201-02988-X},
   year={2001},
   publisher={Addison Wesley}
